--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "deploy": "npx vercel --prod",
+    "deploy:dev": "npx vercel"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -14,7 +16,8 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "vercel": "^41.6.2"
   },
   "engines": {
     "node": ">=18.0.0"
