--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Check for secrets in code
         run: |
           echo "Checking for hardcoded API keys in the codebase..."
-          ! grep -r --include="*.ts" --include="*.tsx" --include="*.js" "apiKey\|sk-\|key=" src/ || exit 1
+          ! grep -r --include="*.ts" --include="*.tsx" --include="*.js" "apiKey=\|apiKey:\|sk-\|key=\"[A-Za-z0-9]\{20,\}" src/ || exit 1
           echo "No hardcoded API keys found! ✅"
 
       - name: Build 🔧
